# glsl-optimizer

./: CMakeLists.txt  Config.cmake.in  README.md
src/glsl/: builtin_functions.cpp  glsl_optimizer.cpp  glsl_optimizer.h  glsl_parser.cpp  ir_print_glsl_visitor.cpp  ir_print_glsl_visitor.h  ir_print_metal_visitor.cpp  ir_print_metal_visitor.h
src/glsl/glcpp/: glcpp-lex.c
src/util/: ralloc.h
